--- a/notebooks/01-data-prep.ipynb
+++ b/notebooks/01-data-prep.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "id": "cba510b5-9955-4574-abc8-c1e7f2a42e52",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "079bf59a-0711-4cd5-b055-83f8d343c05c",
    "metadata": {},
    "outputs": [],
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "798d49dd-a016-47fe-8e5d-01b34c90c637",
    "metadata": {},
    "outputs": [],
@@ -34,58 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "b23540d5-7978-4605-a02e-b53207fe3826",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3638436 entries, 0 to 3638435\n",
-      "Data columns (total 26 columns):\n",
-      " #   Column             Dtype  \n",
-      "---  ------             -----  \n",
-      " 0   month              int64  \n",
-      " 1   time               int64  \n",
-      " 2   day                int64  \n",
-      " 3   place              int64  \n",
-      " 4   m_age              int64  \n",
-      " 5   m_nativity         int64  \n",
-      " 6   m_edu              int64  \n",
-      " 7   num_of_prenatals   int64  \n",
-      " 8   WIC                object \n",
-      " 9   smoker             object \n",
-      " 10  m_bmi              float64\n",
-      " 11  pre_diabetes       object \n",
-      " 12  gest_diabetes      object \n",
-      " 13  pre_hypertension   object \n",
-      " 14  gest_hypertension  object \n",
-      " 15  eclampsia          object \n",
-      " 16  preterm_births     object \n",
-      " 17  infert_treatment   object \n",
-      " 18  fert_drugs         object \n",
-      " 19  prev_c_section     object \n",
-      " 20  no_infections      int64  \n",
-      " 21  induction          object \n",
-      " 22  steroids           object \n",
-      " 23  antibiotics        object \n",
-      " 24  anesthesia         object \n",
-      " 25  delivery_method    int64  \n",
-      "dtypes: float64(1), int64(10), object(15)\n",
-      "memory usage: 721.7+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "92ad4fe6-0ffa-4edc-8381-24c94df63fe6",
+   "execution_count": 32,
+   "id": "34154d87-2d42-4d2d-95ed-59b1e1c0e885",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +234,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,206 +245,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "0da4613b-aa80-447d-8a09-fccff40f6c8c",
+   "execution_count": 33,
+   "id": "b23540d5-7978-4605-a02e-b53207fe3826",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3638436 entries, 0 to 3638435\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column             Dtype  \n",
+      "---  ------             -----  \n",
+      " 0   month              int64  \n",
+      " 1   time               int64  \n",
+      " 2   day                int64  \n",
+      " 3   place              int64  \n",
+      " 4   m_age              int64  \n",
+      " 5   m_nativity         int64  \n",
+      " 6   m_edu              int64  \n",
+      " 7   num_of_prenatals   int64  \n",
+      " 8   WIC                object \n",
+      " 9   smoker             object \n",
+      " 10  m_bmi              float64\n",
+      " 11  pre_diabetes       object \n",
+      " 12  gest_diabetes      object \n",
+      " 13  pre_hypertension   object \n",
+      " 14  gest_hypertension  object \n",
+      " 15  eclampsia          object \n",
+      " 16  preterm_births     object \n",
+      " 17  infert_treatment   object \n",
+      " 18  fert_drugs         object \n",
+      " 19  prev_c_section     object \n",
+      " 20  no_infections      int64  \n",
+      " 21  induction          object \n",
+      " 22  steroids           object \n",
+      " 23  antibiotics        object \n",
+      " 24  anesthesia         object \n",
+      " 25  delivery_method    int64  \n",
+      "dtypes: float64(1), int64(10), object(15)\n",
+      "memory usage: 721.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81b67707-2622-40da-a868-b1962c9f9c8b",
+   "metadata": {},
+   "source": [
+    "# Cleaning each column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c4a14bb-160d-4fed-bc50-b84b3c753e8a",
+   "metadata": {},
+   "source": [
+    "## 0: Month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "acfdc719-1479-466d-8336-8750349b79a8",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>month</th>\n",
-       "      <th>time</th>\n",
-       "      <th>day</th>\n",
-       "      <th>place</th>\n",
-       "      <th>m_age</th>\n",
-       "      <th>m_nativity</th>\n",
-       "      <th>m_edu</th>\n",
-       "      <th>num_of_prenatals</th>\n",
-       "      <th>m_bmi</th>\n",
-       "      <th>no_infections</th>\n",
-       "      <th>delivery_method</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>3.638436e+06</td>\n",
-       "      <td>3.638436e+06</td>\n",
-       "      <td>3.638436e+06</td>\n",
-       "      <td>3.638436e+06</td>\n",
-       "      <td>3.638436e+06</td>\n",
-       "      <td>3.638436e+06</td>\n",
-       "      <td>3.638436e+06</td>\n",
-       "      <td>3.638436e+06</td>\n",
-       "      <td>3.638436e+06</td>\n",
-       "      <td>3.638436e+06</td>\n",
-       "      <td>3.638436e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>6.565899e+00</td>\n",
-       "      <td>1.221814e+03</td>\n",
-       "      <td>4.054787e+00</td>\n",
-       "      <td>1.023927e+00</td>\n",
-       "      <td>2.967069e+01</td>\n",
-       "      <td>1.250608e+00</td>\n",
-       "      <td>4.546062e+00</td>\n",
-       "      <td>1.255017e+01</td>\n",
-       "      <td>2.966213e+01</td>\n",
-       "      <td>1.006431e+00</td>\n",
-       "      <td>1.334787e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>3.429071e+00</td>\n",
-       "      <td>6.494234e+02</td>\n",
-       "      <td>1.860839e+00</td>\n",
-       "      <td>1.533847e-01</td>\n",
-       "      <td>5.813960e+00</td>\n",
-       "      <td>4.383281e-01</td>\n",
-       "      <td>1.869960e+00</td>\n",
-       "      <td>1.262833e+01</td>\n",
-       "      <td>1.303674e+01</td>\n",
-       "      <td>5.298688e-01</td>\n",
-       "      <td>5.496156e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.200000e+01</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>1.300000e+01</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>4.000000e+00</td>\n",
-       "      <td>7.520000e+02</td>\n",
-       "      <td>3.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>2.500000e+01</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>3.000000e+00</td>\n",
-       "      <td>9.000000e+00</td>\n",
-       "      <td>2.290000e+01</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>7.000000e+00</td>\n",
-       "      <td>1.230000e+03</td>\n",
-       "      <td>4.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>3.000000e+01</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>4.000000e+00</td>\n",
-       "      <td>1.100000e+01</td>\n",
-       "      <td>2.660000e+01</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>1.000000e+01</td>\n",
-       "      <td>1.732000e+03</td>\n",
-       "      <td>6.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>3.400000e+01</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>6.000000e+00</td>\n",
-       "      <td>1.300000e+01</td>\n",
-       "      <td>3.210000e+01</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>1.200000e+01</td>\n",
-       "      <td>9.999000e+03</td>\n",
-       "      <td>7.000000e+00</td>\n",
-       "      <td>3.000000e+00</td>\n",
-       "      <td>5.000000e+01</td>\n",
-       "      <td>3.000000e+00</td>\n",
-       "      <td>9.000000e+00</td>\n",
-       "      <td>9.900000e+01</td>\n",
-       "      <td>9.990000e+01</td>\n",
-       "      <td>9.000000e+00</td>\n",
-       "      <td>9.000000e+00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "              month          time           day         place         m_age  \\\n",
-       "count  3.638436e+06  3.638436e+06  3.638436e+06  3.638436e+06  3.638436e+06   \n",
-       "mean   6.565899e+00  1.221814e+03  4.054787e+00  1.023927e+00  2.967069e+01   \n",
-       "std    3.429071e+00  6.494234e+02  1.860839e+00  1.533847e-01  5.813960e+00   \n",
-       "min    1.000000e+00  0.000000e+00  1.000000e+00  1.000000e+00  1.200000e+01   \n",
-       "25%    4.000000e+00  7.520000e+02  3.000000e+00  1.000000e+00  2.500000e+01   \n",
-       "50%    7.000000e+00  1.230000e+03  4.000000e+00  1.000000e+00  3.000000e+01   \n",
-       "75%    1.000000e+01  1.732000e+03  6.000000e+00  1.000000e+00  3.400000e+01   \n",
-       "max    1.200000e+01  9.999000e+03  7.000000e+00  3.000000e+00  5.000000e+01   \n",
-       "\n",
-       "         m_nativity         m_edu  num_of_prenatals         m_bmi  \\\n",
-       "count  3.638436e+06  3.638436e+06      3.638436e+06  3.638436e+06   \n",
-       "mean   1.250608e+00  4.546062e+00      1.255017e+01  2.966213e+01   \n",
-       "std    4.383281e-01  1.869960e+00      1.262833e+01  1.303674e+01   \n",
-       "min    1.000000e+00  1.000000e+00      0.000000e+00  1.300000e+01   \n",
-       "25%    1.000000e+00  3.000000e+00      9.000000e+00  2.290000e+01   \n",
-       "50%    1.000000e+00  4.000000e+00      1.100000e+01  2.660000e+01   \n",
-       "75%    1.000000e+00  6.000000e+00      1.300000e+01  3.210000e+01   \n",
-       "max    3.000000e+00  9.000000e+00      9.900000e+01  9.990000e+01   \n",
-       "\n",
-       "       no_infections  delivery_method  \n",
-       "count   3.638436e+06     3.638436e+06  \n",
-       "mean    1.006431e+00     1.334787e+00  \n",
-       "std     5.298688e-01     5.496156e-01  \n",
-       "min     0.000000e+00     1.000000e+00  \n",
-       "25%     1.000000e+00     1.000000e+00  \n",
-       "50%     1.000000e+00     1.000000e+00  \n",
-       "75%     1.000000e+00     2.000000e+00  \n",
-       "max     9.000000e+00     9.000000e+00  "
+       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.describe()"
+    "# No cleaning needed\n",
+    "df['month'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e9e42cb-e878-48d6-b45b-2bb9eb71de7e",
+   "metadata": {},
+   "source": [
+    "## 1: Time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "750cc683-5e2b-4d32-8d1a-803549bda222",
+   "metadata": {},
+   "source": [
+    "'time' is an integer n such that n//100 is the hours and n%100 is the minutes since 0:00 on a 24-hour clock. This represents time of birth. 9999 encodes an unknown time of birth.\n",
+    "\n",
+    "We will replace 9999 with np.nan and convert all else into a float representing hours since 0:00."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "161278f1-bfb9-4609-abc7-501fbbae0af3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['time'] = df['time'].replace(9999, np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "6f36c80c-e881-44f0-92ea-ef5bb920124c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['time'] = df['time'].apply(lambda x: (x//100) + (x%100)/60)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "603ae2f9-43d9-4f32-906b-63a538926c19",
+   "id": "92e593b0-f02b-4580-83ac-c39fa160df23",
    "metadata": {},
    "outputs": [],
    "source": []
