Prep more columns

--- a/notebooks/01-data-prep.ipynb
+++ b/notebooks/01-data-prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "cba510b5-9955-4574-abc8-c1e7f2a42e52",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "079bf59a-0711-4cd5-b055-83f8d343c05c",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "798d49dd-a016-47fe-8e5d-01b34c90c637",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "34154d87-2d42-4d2d-95ed-59b1e1c0e885",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "b23540d5-7978-4605-a02e-b53207fe3826",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "id": "acfdc719-1479-466d-8336-8750349b79a8",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "161278f1-bfb9-4609-abc7-501fbbae0af3",
    "metadata": {},
    "outputs": [],
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "6f36c80c-e881-44f0-92ea-ef5bb920124c",
    "metadata": {},
    "outputs": [],
@@ -370,9 +370,119 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c2ea99e-0f44-4bf4-b94d-eb956b6cebc8",
+   "metadata": {},
+   "source": [
+    "## 2: Day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "4625101f-a839-47aa-8d49-a00dacc56f31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 3, 4, 1, 7, 5, 6])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# No cleaning needed\n",
+    "df['day'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5939376b-2da2-4377-97d2-2240648f9c11",
+   "metadata": {},
+   "source": [
+    "## 3: Place"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "88b73610-df6d-4ead-9820-64d22e0ef025",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1 encodes a hospital birth, 2 not in a hospital, 3 unknown.\n",
+    "# We will make this categorical, rename as 'hospital',\n",
+    "# and replace 1 with 'Y', 2 with 'N', and 3 with np.nan\n",
+    "df['place'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "768e6ad5-2d75-44ee-bc7a-61d3b0a5c360",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['place'] = df['place'].replace({\n",
+    "    1: 'Y',\n",
+    "    2: 'N',\n",
+    "    3: np.nan\n",
+    "})\n",
+    "\n",
+    "df.rename(columns={'place': 'hospital'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ad4a154-13bf-43b4-9943-881494aff4fc",
+   "metadata": {},
+   "source": [
+    "## 4: Mother's age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "e7a436f0-76f2-4fea-823d-931538e1f4bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28,\n",
+       "       29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45,\n",
+       "       46, 47, 48, 49, 50])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# No cleaning needed\n",
+    "np.sort(df['m_age'].unique())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92e593b0-f02b-4580-83ac-c39fa160df23",
+   "id": "a031fcda-5395-4485-8b84-34f317ca682f",
    "metadata": {},
    "outputs": [],
    "source": []
