--- a/notebooks/01-data-prep.ipynb
+++ b/notebooks/01-data-prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "cba510b5-9955-4574-abc8-c1e7f2a42e52",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "079bf59a-0711-4cd5-b055-83f8d343c05c",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "798d49dd-a016-47fe-8e5d-01b34c90c637",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "34154d87-2d42-4d2d-95ed-59b1e1c0e885",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "b23540d5-7978-4605-a02e-b53207fe3826",
    "metadata": {},
    "outputs": [
@@ -304,14 +304,16 @@
   {
    "cell_type": "markdown",
    "id": "2c4a14bb-160d-4fed-bc50-b84b3c753e8a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 0: Month"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "acfdc719-1479-466d-8336-8750349b79a8",
    "metadata": {},
    "outputs": [
@@ -321,7 +323,7 @@
        "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +336,9 @@
   {
    "cell_type": "markdown",
    "id": "7e9e42cb-e878-48d6-b45b-2bb9eb71de7e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 1: Time"
    ]
@@ -351,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "161278f1-bfb9-4609-abc7-501fbbae0af3",
    "metadata": {},
    "outputs": [],
@@ -361,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "6f36c80c-e881-44f0-92ea-ef5bb920124c",
    "metadata": {},
    "outputs": [],
@@ -372,14 +376,16 @@
   {
    "cell_type": "markdown",
    "id": "9c2ea99e-0f44-4bf4-b94d-eb956b6cebc8",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 2: Day"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "4625101f-a839-47aa-8d49-a00dacc56f31",
    "metadata": {},
    "outputs": [
@@ -389,7 +395,7 @@
        "array([2, 3, 4, 1, 7, 5, 6])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,14 +408,16 @@
   {
    "cell_type": "markdown",
    "id": "5939376b-2da2-4377-97d2-2240648f9c11",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 3: Place"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "88b73610-df6d-4ead-9820-64d22e0ef025",
    "metadata": {},
    "outputs": [
@@ -419,7 +427,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "768e6ad5-2d75-44ee-bc7a-61d3b0a5c360",
    "metadata": {},
    "outputs": [],
@@ -450,14 +458,16 @@
   {
    "cell_type": "markdown",
    "id": "3ad4a154-13bf-43b4-9943-881494aff4fc",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "## 4: Mother's age"
+    "## 4: Age"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "e7a436f0-76f2-4fea-823d-931538e1f4bd",
    "metadata": {},
    "outputs": [
@@ -469,7 +479,7 @@
        "       46, 47, 48, 49, 50])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,9 +490,189 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dbfa174a-39fe-404d-ad14-71f792effe1e",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## 5: Nativity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3c95fa71-2ce3-4230-949c-6e57afd7fe28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1 encodes mother is U.S. born, 2 born outside U.S., 3 unknown.\n",
+    "# We will make this categorical, rename 'm_us_born',\n",
+    "# and replace 1 with 'Y', 2 with 'N', and 3 with np.nan\n",
+    "df['m_nativity'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ab849129-8c25-49bd-9125-0e56c60d201f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['m_nativity'] = df['m_nativity'].replace({\n",
+    "    1: 'Y',\n",
+    "    2: 'N',\n",
+    "    3: np.nan\n",
+    "})\n",
+    "\n",
+    "df.rename(columns={'m_nativity': 'm_us_born'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d9fb41d-e161-43e6-b866-62e3016e754d",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## 6: Education"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0e7d119d-ca59-4abc-a3b5-69a60d0a1747",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 6, 4, 7, 8, 9, 2, 5, 1])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1-8 encodes a mother's education, from 8th grade to doctorate.\n",
+    "# 9 encodes unknown education level. We will replace 9 with np.nan\n",
+    "df['m_edu'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "810ac13d-209e-4eb9-becf-6afe7b935e9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['m_edu'] = df['m_edu'].replace(9, np.nan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "478d05b0-58ac-4755-9413-727b445ae071",
+   "metadata": {},
+   "source": [
+    "## 7: Number of prenatal visits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "52824f3d-22f6-47a5-8f96-0d5fb9ffcced",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "       17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n",
+       "       34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50,\n",
+       "       51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67,\n",
+       "       68, 69, 70, 71, 72, 76, 77, 80, 88, 90, 99])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 0-98 encodes the number of prenatal visits a mother had\n",
+    "# before giving birth, 99 encodes unknown. We will replace 99\n",
+    "# with np.nan\n",
+    "np.sort(df['num_of_prenatals'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3a6f3e7e-8593-4cc1-b7f7-d9b895d63023",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['num_of_prenatals'] = df['num_of_prenatals'].replace(99, np.nan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "894d0dc3-20d3-4793-ba41-82ffb8681a7d",
+   "metadata": {},
+   "source": [
+    "## 10: BMI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f55629b6-5b87-48b9-93d3-8db53c1473aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(13.0), np.float64(99.9))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 13.0-69.9 encode the mother's bmi, 99.9 encodes unknown.\n",
+    "# We will replace 99.9 with np.nan\n",
+    "df['m_bmi'].min(), df['m_bmi'].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ab98bc04-69b9-4d2f-9379-930cc6b1602d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['m_bmi'] = df['m_bmi'].replace(99.9, np.nan)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a031fcda-5395-4485-8b84-34f317ca682f",
+   "id": "4248e426-9338-42fc-9f89-773b012ff56a",
    "metadata": {},
    "outputs": [],
    "source": []
