Update py script to ignore unwanted column in raw data

--- a/notebooks/01-data-prep.ipynb
+++ b/notebooks/01-data-prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "cba510b5-9955-4574-abc8-c1e7f2a42e52",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "079bf59a-0711-4cd5-b055-83f8d343c05c",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "798d49dd-a016-47fe-8e5d-01b34c90c637",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "34154d87-2d42-4d2d-95ed-59b1e1c0e885",
    "metadata": {},
    "outputs": [
@@ -71,9 +71,9 @@
        "      <th>WIC</th>\n",
        "      <th>smoker</th>\n",
        "      <th>...</th>\n",
+       "      <th>eclampsia</th>\n",
        "      <th>preterm_births</th>\n",
        "      <th>infert_treatment</th>\n",
-       "      <th>fert_drugs</th>\n",
        "      <th>prev_c_section</th>\n",
        "      <th>no_infections</th>\n",
        "      <th>induction</th>\n",
@@ -99,7 +99,7 @@
        "      <td>...</td>\n",
        "      <td>N</td>\n",
        "      <td>N</td>\n",
-       "      <td>X</td>\n",
+       "      <td>N</td>\n",
        "      <td>N</td>\n",
        "      <td>1</td>\n",
        "      <td>N</td>\n",
@@ -123,7 +123,7 @@
        "      <td>...</td>\n",
        "      <td>N</td>\n",
        "      <td>N</td>\n",
-       "      <td>X</td>\n",
+       "      <td>N</td>\n",
        "      <td>N</td>\n",
        "      <td>1</td>\n",
        "      <td>N</td>\n",
@@ -145,9 +145,9 @@
        "      <td>N</td>\n",
        "      <td>N</td>\n",
        "      <td>...</td>\n",
+       "      <td>N</td>\n",
        "      <td>Y</td>\n",
        "      <td>N</td>\n",
-       "      <td>X</td>\n",
        "      <td>Y</td>\n",
        "      <td>1</td>\n",
        "      <td>N</td>\n",
@@ -171,7 +171,7 @@
        "      <td>...</td>\n",
        "      <td>N</td>\n",
        "      <td>N</td>\n",
-       "      <td>X</td>\n",
+       "      <td>N</td>\n",
        "      <td>N</td>\n",
        "      <td>1</td>\n",
        "      <td>N</td>\n",
@@ -193,9 +193,9 @@
        "      <td>N</td>\n",
        "      <td>N</td>\n",
        "      <td>...</td>\n",
+       "      <td>N</td>\n",
        "      <td>Y</td>\n",
        "      <td>N</td>\n",
-       "      <td>X</td>\n",
        "      <td>N</td>\n",
        "      <td>1</td>\n",
        "      <td>N</td>\n",
@@ -206,7 +206,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 26 columns</p>\n",
+       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -217,24 +217,24 @@
        "3      1  1910    2      2     29           1      4                10   N   \n",
        "4      1  2241    2      1     28           1      6                13   N   \n",
        "\n",
-       "  smoker  ...  preterm_births infert_treatment fert_drugs prev_c_section  \\\n",
-       "0      N  ...               N                N          X              N   \n",
-       "1      N  ...               N                N          X              N   \n",
-       "2      N  ...               Y                N          X              Y   \n",
-       "3      N  ...               N                N          X              N   \n",
-       "4      N  ...               Y                N          X              N   \n",
+       "  smoker  ...  eclampsia preterm_births infert_treatment prev_c_section  \\\n",
+       "0      N  ...          N              N                N              N   \n",
+       "1      N  ...          N              N                N              N   \n",
+       "2      N  ...          N              Y                N              Y   \n",
+       "3      N  ...          N              N                N              N   \n",
+       "4      N  ...          N              Y                N              N   \n",
        "\n",
-       "  no_infections induction steroids antibiotics anesthesia delivery_method  \n",
-       "0             1         N        N           N          N               1  \n",
-       "1             1         N        N           N          N               1  \n",
-       "2             1         N        N           Y          Y               1  \n",
-       "3             1         N        N           N          N               1  \n",
-       "4             1         N        N           N          N               1  \n",
+       "  no_infections induction steroids antibiotics anesthesia  delivery_method  \n",
+       "0             1         N        N           N          N                1  \n",
+       "1             1         N        N           N          N                1  \n",
+       "2             1         N        N           Y          Y                1  \n",
+       "3             1         N        N           N          N                1  \n",
+       "4             1         N        N           N          N                1  \n",
        "\n",
-       "[5 rows x 26 columns]"
+       "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "b23540d5-7978-4605-a02e-b53207fe3826",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 3638436 entries, 0 to 3638435\n",
-      "Data columns (total 26 columns):\n",
+      "Data columns (total 25 columns):\n",
       " #   Column             Dtype  \n",
       "---  ------             -----  \n",
       " 0   month              int64  \n",
@@ -276,16 +276,15 @@
       " 15  eclampsia          object \n",
       " 16  preterm_births     object \n",
       " 17  infert_treatment   object \n",
-      " 18  fert_drugs         object \n",
-      " 19  prev_c_section     object \n",
-      " 20  no_infections      int64  \n",
-      " 21  induction          object \n",
-      " 22  steroids           object \n",
-      " 23  antibiotics        object \n",
-      " 24  anesthesia         object \n",
-      " 25  delivery_method    int64  \n",
-      "dtypes: float64(1), int64(10), object(15)\n",
-      "memory usage: 721.7+ MB\n"
+      " 18  prev_c_section     object \n",
+      " 19  no_infections      int64  \n",
+      " 20  induction          object \n",
+      " 21  steroids           object \n",
+      " 22  antibiotics        object \n",
+      " 23  anesthesia         object \n",
+      " 24  delivery_method    int64  \n",
+      "dtypes: float64(1), int64(10), object(14)\n",
+      "memory usage: 694.0+ MB\n"
      ]
     }
    ],
@@ -313,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "acfdc719-1479-466d-8336-8750349b79a8",
    "metadata": {},
    "outputs": [
@@ -323,7 +322,7 @@
        "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "161278f1-bfb9-4609-abc7-501fbbae0af3",
    "metadata": {},
    "outputs": [],
@@ -365,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "6f36c80c-e881-44f0-92ea-ef5bb920124c",
    "metadata": {},
    "outputs": [],
@@ -385,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "4625101f-a839-47aa-8d49-a00dacc56f31",
    "metadata": {},
    "outputs": [
@@ -395,7 +394,7 @@
        "array([2, 3, 4, 1, 7, 5, 6])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "88b73610-df6d-4ead-9820-64d22e0ef025",
    "metadata": {},
    "outputs": [
@@ -427,7 +426,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "768e6ad5-2d75-44ee-bc7a-61d3b0a5c360",
    "metadata": {},
    "outputs": [],
@@ -467,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "e7a436f0-76f2-4fea-823d-931538e1f4bd",
    "metadata": {},
    "outputs": [
@@ -479,7 +478,7 @@
        "       46, 47, 48, 49, 50])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "3c95fa71-2ce3-4230-949c-6e57afd7fe28",
    "metadata": {},
    "outputs": [
@@ -511,7 +510,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "ab849129-8c25-49bd-9125-0e56c60d201f",
    "metadata": {},
    "outputs": [],
@@ -551,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "0e7d119d-ca59-4abc-a3b5-69a60d0a1747",
    "metadata": {},
    "outputs": [
@@ -561,7 +560,7 @@
        "array([3, 6, 4, 7, 8, 9, 2, 5, 1])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "810ac13d-209e-4eb9-becf-6afe7b935e9b",
    "metadata": {},
    "outputs": [],
@@ -592,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "52824f3d-22f6-47a5-8f96-0d5fb9ffcced",
    "metadata": {},
    "outputs": [
@@ -606,7 +605,7 @@
        "       68, 69, 70, 71, 72, 76, 77, 80, 88, 90, 99])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "3a6f3e7e-8593-4cc1-b7f7-d9b895d63023",
    "metadata": {},
    "outputs": [],
@@ -638,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "f55629b6-5b87-48b9-93d3-8db53c1473aa",
    "metadata": {},
    "outputs": [
@@ -648,7 +647,7 @@
        "(np.float64(13.0), np.float64(99.9))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "ab98bc04-69b9-4d2f-9379-930cc6b1602d",
    "metadata": {},
    "outputs": [],
