Finish data prep notebook

--- a/notebooks/01-data-prep.ipynb
+++ b/notebooks/01-data-prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 77,
    "id": "cba510b5-9955-4574-abc8-c1e7f2a42e52",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 78,
    "id": "079bf59a-0711-4cd5-b055-83f8d343c05c",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "id": "798d49dd-a016-47fe-8e5d-01b34c90c637",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "id": "34154d87-2d42-4d2d-95ed-59b1e1c0e885",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 81,
    "id": "b23540d5-7978-4605-a02e-b53207fe3826",
    "metadata": {
     "scrolled": true
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 82,
    "id": "acfdc719-1479-466d-8336-8750349b79a8",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
        "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 83,
    "id": "161278f1-bfb9-4609-abc7-501fbbae0af3",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 84,
    "id": "6f36c80c-e881-44f0-92ea-ef5bb920124c",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 85,
    "id": "4625101f-a839-47aa-8d49-a00dacc56f31",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
        "array([2, 3, 4, 1, 7, 5, 6])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 86,
    "id": "88b73610-df6d-4ead-9820-64d22e0ef025",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 87,
    "id": "768e6ad5-2d75-44ee-bc7a-61d3b0a5c360",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 88,
    "id": "e7a436f0-76f2-4fea-823d-931538e1f4bd",
    "metadata": {},
    "outputs": [
@@ -482,7 +482,7 @@
        "       46, 47, 48, 49, 50])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 89,
    "id": "3c95fa71-2ce3-4230-949c-6e57afd7fe28",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 90,
    "id": "ab849129-8c25-49bd-9125-0e56c60d201f",
    "metadata": {},
    "outputs": [],
@@ -545,14 +545,16 @@
   {
    "cell_type": "markdown",
    "id": "2d9fb41d-e161-43e6-b866-62e3016e754d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## 6: Education"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 91,
    "id": "0e7d119d-ca59-4abc-a3b5-69a60d0a1747",
    "metadata": {},
    "outputs": [
@@ -562,7 +564,7 @@
        "array([3, 6, 4, 7, 8, 9, 2, 5, 1])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 92,
    "id": "810ac13d-209e-4eb9-becf-6afe7b935e9b",
    "metadata": {},
    "outputs": [],
@@ -595,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 93,
    "id": "52824f3d-22f6-47a5-8f96-0d5fb9ffcced",
    "metadata": {},
    "outputs": [
@@ -609,7 +611,7 @@
        "       68, 69, 70, 71, 72, 76, 77, 80, 88, 90, 99])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 94,
    "id": "3a6f3e7e-8593-4cc1-b7f7-d9b895d63023",
    "metadata": {},
    "outputs": [],
@@ -643,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 95,
    "id": "f55629b6-5b87-48b9-93d3-8db53c1473aa",
    "metadata": {},
    "outputs": [
@@ -653,7 +655,7 @@
        "(np.float64(13.0), np.float64(99.9))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 96,
    "id": "ab98bc04-69b9-4d2f-9379-930cc6b1602d",
    "metadata": {},
    "outputs": [],
@@ -686,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 97,
    "id": "de6e6b3b-cb65-4cab-a759-a39acf31faa0",
    "metadata": {},
    "outputs": [
@@ -696,7 +698,7 @@
        "array([1, 0, 9])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 98,
    "id": "fa76f55f-03f6-4e58-8ab2-5844ba4f40b3",
    "metadata": {},
    "outputs": [],
@@ -735,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 99,
    "id": "742a63b6-0cbf-49b9-ab5e-c780e2c6c819",
    "metadata": {},
    "outputs": [
@@ -745,7 +747,7 @@
        "array([1, 2, 9])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 100,
    "id": "e9b1464a-7f42-4382-b347-5cf88688ed52",
    "metadata": {},
    "outputs": [],
@@ -775,16 +777,14 @@
   {
    "cell_type": "markdown",
    "id": "8d9f3939-1986-4124-b268-d23778e90f04",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## All other columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 101,
    "id": "c4aaf3ec-e6e6-4b32-863b-d587ce2c92e8",
    "metadata": {},
    "outputs": [],
@@ -796,14 +796,16 @@
   {
    "cell_type": "markdown",
    "id": "5ee1f4e2-eb72-4d4c-bca4-6ec849292faf",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Drop np.nan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 102,
    "id": "3466bcbd-5ef9-4a86-81eb-1197303b321f",
    "metadata": {},
    "outputs": [
@@ -852,19 +854,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "41f9616c-43f1-4538-ab15-9d277fc0f515",
+   "execution_count": 103,
+   "id": "10771299-a0d5-460a-bf93-4eb719103e83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# m_edu, num_of_prenatals should be ints\n",
-    "# try dropna then .astype(int)"
+    "# Drop all incomplete records (~250000)\n",
+    "df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "49c8e3ad-33eb-43e3-8114-3d1c0c0772a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\austi\\AppData\\Local\\Temp\\ipykernel_13548\\3705305132.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df.replace({'Y': 1, 'N': 0}, inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Recode the binary predictors:\n",
+    "# Y -> 1\n",
+    "# N -> 0\n",
+    "df.replace({'Y': 1, 'N': 0}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "e4020d3c-08e8-4b0d-ad72-74c8d8c176c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recast m_edu and num_of_prenatals as ints\n",
+    "df['m_edu'] = df['m_edu'].astype(int)\n",
+    "df['num_of_prenatals'] = df['num_of_prenatals'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "4b459156-1b53-4607-8661-352c67bf977a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 3388302 entries, 0 to 3638435\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column             Dtype  \n",
+      "---  ------             -----  \n",
+      " 0   month              int64  \n",
+      " 1   time               float64\n",
+      " 2   day                int64  \n",
+      " 3   hospital           int64  \n",
+      " 4   m_age              int64  \n",
+      " 5   m_us_born          int64  \n",
+      " 6   m_edu              int64  \n",
+      " 7   num_of_prenatals   int64  \n",
+      " 8   WIC                int64  \n",
+      " 9   smoker             int64  \n",
+      " 10  m_bmi              float64\n",
+      " 11  pre_diabetes       int64  \n",
+      " 12  gest_diabetes      int64  \n",
+      " 13  pre_hypertension   int64  \n",
+      " 14  gest_hypertension  int64  \n",
+      " 15  eclampsia          int64  \n",
+      " 16  preterm_births     int64  \n",
+      " 17  infert_treatment   int64  \n",
+      " 18  prev_c_section     int64  \n",
+      " 19  sti                int64  \n",
+      " 20  induction          int64  \n",
+      " 21  steroids           int64  \n",
+      " 22  antibiotics        int64  \n",
+      " 23  anesthesia         int64  \n",
+      " 24  c_section          int64  \n",
+      "dtypes: float64(2), int64(23)\n",
+      "memory usage: 672.1 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15b2d3e8-1321-4baa-bb2e-af60995be7ae",
+   "metadata": {},
+   "source": [
+    "# Store processed data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "f1a6b79b-d77a-4e25-837e-0c2d218fc297",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the processed data\n",
+    "DATA_PATH = Path.cwd().resolve().parents[0] / \"data\" / \"processed\" / \"processed_data.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "ea4f867a-1d75-41be-9adc-dd07ca75f520",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(DATA_PATH, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "16e78cb1-f668-4310-ac2a-1976813a0965",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try downcasting the dtypes of the predictors to save space"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3153b107-265d-4869-b39b-179d22dff91a",
+   "id": "06d1a510-0477-4576-88b2-7fd356167b75",
    "metadata": {},
    "outputs": [],
    "source": []
